--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
                 L'histoire du <abbr title="Hyper Text Markup Language"class="dropdown">HTML</abbr> à travers les âges
             </p>
             <nav class="bg-dark"> <!--élément qui regroupe des balises de navigation -->
-                <ul class="flex-container"><!-- Conteneur de liste-->
+               <!--Burger menu button:
+                        Display pnly when device width < 578px -->
+                <button id="burger-btn">
+                    ---<br>
+                    ---<br>
+                    ---<br>
+                </button>
+                <ul id="menu-btn"  class="flex-container"><!-- Conteneur de liste-->
                     <!-- Lien interne vers une section -->
                     <li>
                         <a class= "btn bg-dark " href="#" title="accueil">
