--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link href="./assets/css/styles.css" rel="stylesheet">
         <!-- load icomoon styles-->
         <link href="./assets/css/style.css" rel="stylesheet">
+        <link href="./assets/css/layout.css" rel="stylesheet">
 
     </head>
     
@@ -69,8 +70,8 @@
             </nav>
         </header>
 
-        <main>  
-            <section id ="section-html">
+        <main class="row">  
+            <section id ="section-html" class="col-6">
                 <header>
                     <h2>Le langage HTML</h2>
                     <p>
@@ -102,7 +103,7 @@
                 
             </section>
 
-            <section id="section-css">
+            <section id="section-css" class="col-6">
                 <header>
                     <h2> Le langage CSS </h2>
                     <p>
