--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <!-- abbr avec l'attribut title pour donner la signification 
                     de l'abbréviation définie 
                 -->
-                L'histoire du <abbr title="Hyper Text Markup Language"class="dropdown">HTML</abbr> à travers les âges
+                L'histoire du <abbr title="Hyper Text Markup Language"class="dropdown"> HTML</abbr> à travers les âges
             </p>
             <nav class="bg-dark"> <!--élément qui regroupe des balises de navigation -->
                <!--Burger menu button:
@@ -71,7 +71,7 @@
         </header>
 
         <main class="row">  
-            <section id ="section-html" class="col-6">
+            <section id ="section-html" class="col-xl-6 col-12">
                 <header>
                     <h2>Le langage HTML</h2>
                     <p>
@@ -103,7 +103,7 @@
                 
             </section>
 
-            <section id="section-css" class="col-6">
+            <section id="section-css" class="col-xl-6 col-12">
                 <header>
                     <h2> Le langage CSS </h2>
                     <p>
