--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <!-- load icomoon styles-->
         <link href="./assets/css/style.css" rel="stylesheet">
         <link href="./assets/css/layout.css" rel="stylesheet">
-
+        <link href="./assets/css/forms.css" rel="stylesheet">
+ 
     </head>
     
     <body>
@@ -157,14 +158,18 @@
                 </div>
 
                 <div>
-                    <input type="text" name="name-ctrl" id="name-ctrl" placeholder="Votre email..." requierd>
+                    <span class="required">
+                    <input type="text" name="name-ctrl" id="name-ctrl" placeholder="Votre email..." required>
+                    </span>    
                 </div>   
                 <div>
+                    <span class="required">
                     <label>Objet de votre demande :</label>
                     <textarea name="object-ctrl" id="object-ctrl"></textarea>
+                    </span>
                 </div>
                 <div>
-                    <button id="send-btn" type="submit">Envoyer</button>
+                    <button class="btn-envoi" id="send-btn" >Envoyer</button>
                 </div>
             </form>
         <!--</template>-->
